[#218] feat(Comment): Service 수정사항 적용